{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "e596da0d-8b07-4980-ba51-bd1030297e83",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "093f10e4-52fa-4794-b9e7-0ba260dbf75b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Haste",
                    "type": "Button",
                    "id": "e6cf43dc-6a26-44c2-9b7a-f0c7fa972e16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5f413b2b-0a4b-4868-89f3-76a72e1b2eee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "0251c439-9864-4e7a-b4eb-f8b0b17b84db",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SingleShoot",
                    "type": "Button",
                    "id": "52932c56-a68e-4e92-a20f-7b2797aaf90d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MultiShoot",
                    "type": "Value",
                    "id": "b91020d4-7f59-47d0-a036-d17108ec5cb7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "c7ad9e70-bedc-4a7d-85df-905e4f76f993",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropItem",
                    "type": "Button",
                    "id": "4922e74a-5603-434d-90d4-67eb6f7a9da3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "85c5377b-6a16-4a04-89ab-5775ae02e9c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeTypeShooting",
                    "type": "Button",
                    "id": "5dcc5519-6689-4f6a-9811-77fd61e16127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DropWeapon",
                    "type": "Button",
                    "id": "d8231d31-02f9-44c9-a63f-6a1b096ca9cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "aa65a5ad-1154-48f2-b33b-8e45e3a25917",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Axis",
                    "id": "0464b3b7-d35f-4be2-9d32-e1b2c5cef713",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "cb1754e4-87a1-421b-b2db-cb443737dfc6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d7217e97-1508-4169-8c06-e961f0bb7f2d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "837b26a0-ba41-423e-8b32-28065c8570ca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "944cd57b-b322-476e-9d60-26683c600cce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f59246a3-8182-4e78-b4d6-dcc257ffda61",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b668713d-bb7d-45f2-80fd-7042b1d699ae",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9532b7d2-a0f6-4d7f-9a50-c223af87ba0e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "SingleShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e78004de-60a7-47f0-a424-e9f88596484c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b143f64e-f093-4726-85c6-606569b7e314",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold(duration=0.4,pressPoint=0.5)",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Haste",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d107a69-d967-4369-bb97-09b820871193",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "DropItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d9f4736-833d-4bc3-9da7-ca58be727863",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33547d29-a965-43c7-9ede-519077b2d844",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "ChangeTypeShooting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2487179-9e4b-4eae-ad62-99137bb9efb6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "DropWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f4245fa-4ab1-42be-85da-25d571911a75",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9540e202-a29a-475c-b2d6-7b4a90afc1af",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.1,pressPoint=1.401298E-45)",
                    "processors": "",
                    "groups": "Mouse + Keyboard",
                    "action": "MultiShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse + Keyboard",
            "bindingGroup": "Mouse + Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}